fix: enable dark mode on meta search & replace antd

--- a/css/Search.css
+++ b/css/Search.css
@@ -1,28 +1,3 @@
-.app-container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  min-width: 100vw;
-}
-.head-container {
-  margin-top: 10px;
-  background: #fff;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-  align-items: center;
-  text-align: center;
-  flex-shrink: 0;
-  width: 100vw;
-  height: 40px;
-}
-.logo-left {
-  margin: 3px 10px;
-  height: 36px;
-}
-.ant-divider-vertical {
-  height: 40px;
-}
 .dropdown-button {
   height: 40px;
   margin-left: 5px;
@@ -31,19 +6,17 @@
 .dropdown-button:first-of-type {
   margin-left: 0;
 }
-.links-container {
-  display: flex;
-  flex-wrap: nowrap;
-  margin-right: 10px;
-}
-.ant-tabs-nav {
+.search-body-container .ant-tabs-nav {
   margin: 0 10px !important;
 }
-.body-container,
-.ant-tabs-content-holder,
-.ant-tabs-content {
+.search-body-container .ant-tabs-content-holder,
+.search-body-container .ant-tabs-content {
   width: 100vw;
   flex-grow: 1;
   display: flex;
   align-items: stretch;
+}
+.search-bar-landing .ant-input-group-addon > button {
+  height: 34px;
+  width: 34px;
 }
